--- a/css/global.css
+++ b/css/global.css
@@ -12,6 +12,8 @@
 }
 
 body {
+  display: flex;
+  flex-direction: column;
   font-family: var(--font-family);
 }
 
@@ -21,6 +23,11 @@ body {
   align-items: center;
 }
 
+.flex-col {
+  display: flex;
+  flex-direction: column;
+}
+
 .row {
   display: flex;
   flex-direction: row;
@@ -28,6 +35,18 @@ body {
   align-items: center;
 }
 
-.gap-45{
+.gap-45 {
   gap: 45px;
+}
+
+main {
+  padding-top: 9.25rem;
+}
+
+header {
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 9.25rem;
 }
