--- a/css/nav.css
+++ b/css/nav.css
@@ -11,11 +11,8 @@
   text-align: center;
   padding: 5px;
   font-size: 14px;
-  position: fixed;
   width: 100%;
   height: 1.85rem;
-  top: 0;
-  left: 0;
   z-index: 1100;
 
   & span:nth-child(1) {
@@ -30,13 +27,9 @@
   justify-content: center;
   flex-direction: column;
   gap: 1.37rem;
-  padding: 10px 20px;
   background: white;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  position: fixed;
   width: 100%;
-  top: 30px;
-  z-index: 1000;
   padding: 1rem;
 }
 
